@@ -43,8 +43,7 @@ import com.gameserver.thread.ThreadPoolManager;
 import com.util.ResourceUtil;
 import com.util.database.L2DatabaseFactory;
 
-public class TradeController
-{
+public class TradeController {
 	private static Log _log = LogFactory.getLog(TradeController.class);
 
 	private static TradeController _instance;
@@ -53,106 +52,88 @@ public class TradeController
 	private Map<Integer, L2TradeList> _lists;
 	private Map<Integer, L2TradeList> _listsTaskItem;
 
-	public class RestoreCount implements Runnable
-	{
+	public class RestoreCount implements Runnable {
 		private int _timer;
 
-		public RestoreCount(int time)
-		{
+		public RestoreCount(int time) {
 			_timer = time;
 		}
 
 		@Override
-		public void run()
-		{
-			try
-			{
+		public void run() {
+			try {
 				restoreCount(_timer);
 				dataTimerSave(_timer);
-				ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(_timer), (long) _timer * 60 * 60 * 1000);
+				ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(_timer),
+						(long) _timer * 60 * 60 * 1000);
+			} catch (Throwable t) {
 			}
-			catch(Throwable t)
-			{}
 		}
 	}
 
-	public static TradeController getInstance()
-	{
-		if(_instance == null)
-		{
+	public static TradeController getInstance() {
+		if (_instance == null) {
 			_instance = new TradeController();
 		}
 		return _instance;
 	}
 
 	@SuppressWarnings("unused")
-	private TradeController()
-	{
+	private TradeController() {
 		_lists = new FastMap<Integer, L2TradeList>();
 		_listsTaskItem = new FastMap<Integer, L2TradeList>();
 		File buylistData = new File(Config.DATAPACK_ROOT, "data/csv/buylists.csv");
 
-		if(buylistData.exists())
-		{
+		if (buylistData.exists()) {
 			_log.warn("Do, please, remove buylists from data folder and use SQL buylist instead");
 			String line = null;
 			LineNumberReader lnr = null;
 			int dummyItemCount = 0;
 
-			try
-			{
+			try {
 				lnr = new LineNumberReader(new BufferedReader(new FileReader(buylistData)));
 
-				while((line = lnr.readLine()) != null)
-				{
-					if(line.trim().length() == 0 || line.startsWith("#"))
-					{
+				while ((line = lnr.readLine()) != null) {
+					if (line.trim().length() == 0 || line.startsWith("#")) {
 						continue;
 					}
 					dummyItemCount += parseList(line);
 				}
 
 				_log.info("TradeController: Loaded " + _lists.size() + " buylists.");
-			}
-			catch(Exception e)
-			{
+			} catch (Exception e) {
 				_log.error("error while creating trade controller in linenr: " + lnr.getLineNumber(), e);
 			}
 			lnr = null;
 			buylistData = null;
-		}
-		else
-		{
+		} else {
 			_log.info("No buylists were found in data folder, using SQL buylist instead");
 			Connection con = null;
 
 			int dummyItemCount = 0;
 			boolean LimitedItem = false;
 
-			try
-			{
+			try {
 				con = L2DatabaseFactory.getInstance().getConnection();
-				PreparedStatement statement1 = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance().safetyString(new String[]
-				{
-						"shop_id", "npc_id"
-				}) + " FROM merchant_shopids");
+				PreparedStatement statement1 = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance()
+						.safetyString(new String[] {
+								"shop_id", "npc_id"
+						}) + " FROM merchant_shopids");
 
 				ResultSet rset1 = statement1.executeQuery();
 
-				while(rset1.next())
-				{
-					PreparedStatement statement = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance().safetyString(new String[]
-					{
-							"item_id", "price", "shop_id", "order", "count", "time", "currentCount"
-					}) + " FROM merchant_buylists WHERE shop_id=? ORDER BY " + L2DatabaseFactory.getInstance().safetyString(new String[]
-					{
-						"order"
-					}) + " ASC");
+				while (rset1.next()) {
+					PreparedStatement statement = con.prepareStatement("SELECT "
+							+ L2DatabaseFactory.getInstance().safetyString(new String[] {
+									"item_id", "price", "shop_id", "order", "count", "time", "currentCount"
+							}) + " FROM merchant_buylists WHERE shop_id=? ORDER BY "
+							+ L2DatabaseFactory.getInstance().safetyString(new String[] {
+									"order"
+							}) + " ASC");
 
 					statement.setString(1, String.valueOf(rset1.getInt("shop_id")));
 					ResultSet rset = statement.executeQuery();
-					if(rset.next())
-					{
+					if (rset.next()) {
 						LimitedItem = false;
 						dummyItemCount++;
 						L2TradeList buy1 = new L2TradeList(rset1.getInt("shop_id"));
@@ -165,15 +146,13 @@ public class TradeController
 
 						L2ItemInstance item = ItemTable.getInstance().createDummyItem(itemId);
 
-						if(item == null)
-						{
+						if (item == null) {
 							rset.close();
 							ResourceUtil.closeStatement(statement);
 							continue;
 						}
 
-						if(count > -1)
-						{
+						if (count > -1) {
 							item.setCountDecrease(true);
 							LimitedItem = true;
 						}
@@ -182,12 +161,9 @@ public class TradeController
 						item.setTime(time);
 						item.setInitCount(count);
 
-						if(currentCount > -1)
-						{
+						if (currentCount > -1) {
 							item.setCount(currentCount);
-						}
-						else
-						{
+						} else {
 							item.setCount(count);
 						}
 
@@ -195,10 +171,8 @@ public class TradeController
 						item = null;
 						buy1.setNpcId(rset1.getString("npc_id"));
 
-						try
-						{
-							while(rset.next())
-							{
+						try {
+							while (rset.next()) {
 								dummyItemCount++;
 								itemId = rset.getInt("item_id");
 								price = rset.getInt("price");
@@ -207,41 +181,31 @@ public class TradeController
 								currentCount = rset.getInt("currentCount");
 								L2ItemInstance item2 = ItemTable.getInstance().createDummyItem(itemId);
 
-								if(item2 == null)
-								{
+								if (item2 == null) {
 									continue;
 								}
 
-								if(count > -1)
-								{
+								if (count > -1) {
 									item2.setCountDecrease(true);
 									LimitedItem = true;
 								}
 								item2.setPriceToSell(price);
 								item2.setTime(time);
 								item2.setInitCount(count);
-								if(currentCount > -1)
-								{
+								if (currentCount > -1) {
 									item2.setCount(currentCount);
-								}
-								else
-								{
+								} else {
 									item2.setCount(count);
 								}
 								buy1.addItem(item2);
 							}
-						}
-						catch(Exception e)
-						{
+						} catch (Exception e) {
 							_log.warn("TradeController: Problem with buylist " + buy1.getListId() + " item " + itemId);
 						}
-						if(LimitedItem)
-						{
-							_listsTaskItem.put(new Integer(buy1.getListId()), buy1);
-						}
-						else
-						{
-							_lists.put(new Integer(buy1.getListId()), buy1);
+						if (LimitedItem) {
+							_listsTaskItem.put(Integer.valueOf(buy1.getListId()), buy1);
+						} else {
+							_lists.put(Integer.valueOf(buy1.getListId()), buy1);
 						}
 
 						_nextListId = Math.max(_nextListId, buy1.getListId() + 1);
@@ -260,25 +224,22 @@ public class TradeController
 				_log.info("TradeController: Loaded " + _lists.size() + " buylists.");
 				_log.info("TradeController: Loaded " + _listsTaskItem.size() + " limited buylists.");
 
-				try
-				{
+				try {
 					int time = 0;
 					long savetimer = 0;
 					long currentMillis = System.currentTimeMillis();
 
-					PreparedStatement statement2 = con.prepareStatement("SELECT DISTINCT time, savetimer FROM merchant_buylists WHERE time <> 0 ORDER BY time");
+					PreparedStatement statement2 = con.prepareStatement(
+							"SELECT DISTINCT time, savetimer FROM merchant_buylists WHERE time <> 0 ORDER BY time");
 					ResultSet rset2 = statement2.executeQuery();
 
-					while(rset2.next())
-					{
+					while (rset2.next()) {
 						time = rset2.getInt("time");
 						savetimer = rset2.getLong("savetimer");
-						if(savetimer - currentMillis > 0)
-						{
-							ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time), savetimer - System.currentTimeMillis());
-						}
-						else
-						{
+						if (savetimer - currentMillis > 0) {
+							ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time),
+									savetimer - System.currentTimeMillis());
+						} else {
 							ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time), 0);
 						}
 					}
@@ -287,50 +248,40 @@ public class TradeController
 
 					rset2 = null;
 					statement2 = null;
-				}
-				catch(Exception e)
-				{
+				} catch (Exception e) {
 					_log.warn("TradeController: Could not restore Timer for Item count.", e);
 				}
-			}
-			catch(Exception e)
-			{
+			} catch (Exception e) {
 				_log.warn("TradeController: Buylists could not be initialized.", e);
-			}
-			finally
-			{
-				ResourceUtil.closeConnection(con); 
+			} finally {
+				ResourceUtil.closeConnection(con);
 			}
 
-			if(Config.CUSTOM_MERCHANT_TABLES)
-			{
-				try
-				{
+			if (Config.CUSTOM_MERCHANT_TABLES) {
+				try {
 					int initialSize = _lists.size();
 					con = L2DatabaseFactory.getInstance().getConnection();
 
-					PreparedStatement statement1 = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance().safetyString(new String[]
-					{
-							"shop_id", "npc_id"
-					}) + " FROM custom_merchant_shopids");
+					PreparedStatement statement1 = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance()
+							.safetyString(new String[] {
+									"shop_id", "npc_id"
+							}) + " FROM custom_merchant_shopids");
 
 					ResultSet rset1 = statement1.executeQuery();
 
-					while(rset1.next())
-					{
-						PreparedStatement statement = con.prepareStatement("SELECT " + L2DatabaseFactory.getInstance().safetyString(new String[]
-						{
-								"item_id", "price", "shop_id", "order", "count", "time", "currentCount"
-						}) + " FROM custom_merchant_buylists WHERE shop_id=? ORDER BY " + L2DatabaseFactory.getInstance().safetyString(new String[]
-						{
-							"order"
-						}) + " ASC");
+					while (rset1.next()) {
+						PreparedStatement statement = con.prepareStatement("SELECT "
+								+ L2DatabaseFactory.getInstance().safetyString(new String[] {
+										"item_id", "price", "shop_id", "order", "count", "time", "currentCount"
+								}) + " FROM custom_merchant_buylists WHERE shop_id=? ORDER BY "
+								+ L2DatabaseFactory.getInstance().safetyString(new String[] {
+										"order"
+								}) + " ASC");
 
 						statement.setString(1, String.valueOf(rset1.getInt("shop_id")));
 						ResultSet rset = statement.executeQuery();
 
-						if(rset.next())
-						{
+						if (rset.next()) {
 							LimitedItem = false;
 							dummyItemCount++;
 							L2TradeList buy1 = new L2TradeList(rset1.getInt("shop_id"));
@@ -340,15 +291,13 @@ public class TradeController
 							int currentCount = rset.getInt("currentCount");
 							int time = rset.getInt("time");
 							L2ItemInstance item = ItemTable.getInstance().createDummyItem(itemId);
-							if(item == null)
-							{
+							if (item == null) {
 								rset.close();
 								ResourceUtil.closeStatement(statement);
 								continue;
 							}
 
-							if(count > -1)
-							{
+							if (count > -1) {
 								item.setCountDecrease(true);
 								LimitedItem = true;
 							}
@@ -356,12 +305,9 @@ public class TradeController
 							item.setTime(time);
 							item.setInitCount(count);
 
-							if(currentCount > -1)
-							{
+							if (currentCount > -1) {
 								item.setCount(currentCount);
-							}
-							else
-							{
+							} else {
 								item.setCount(count);
 							}
 
@@ -369,10 +315,8 @@ public class TradeController
 							item = null;
 							buy1.setNpcId(rset1.getString("npc_id"));
 
-							try
-							{
-								while(rset.next())
-								{
+							try {
+								while (rset.next()) {
 									dummyItemCount++;
 									itemId = rset.getInt("item_id");
 									price = rset.getInt("price");
@@ -380,42 +324,33 @@ public class TradeController
 									time = rset.getInt("time");
 									currentCount = rset.getInt("currentCount");
 									L2ItemInstance item2 = ItemTable.getInstance().createDummyItem(itemId);
-									if(item2 == null)
-									{
+									if (item2 == null) {
 										continue;
 									}
-									if(count > -1)
-									{
+									if (count > -1) {
 										item2.setCountDecrease(true);
 										LimitedItem = true;
 									}
 									item2.setPriceToSell(price);
 									item2.setTime(time);
 									item2.setInitCount(count);
-									if(currentCount > -1)
-									{
+									if (currentCount > -1) {
 										item2.setCount(currentCount);
-									}
-									else
-									{
+									} else {
 										item2.setCount(count);
 									}
 									buy1.addItem(item2);
 
 									item2 = null;
 								}
+							} catch (Exception e) {
+								_log.warn("TradeController: Problem with buylist " + buy1.getListId() + " item "
+										+ itemId);
 							}
-							catch(Exception e)
-							{
-								_log.warn("TradeController: Problem with buylist " + buy1.getListId() + " item " + itemId);
-							}
-							if(LimitedItem)
-							{
-								_listsTaskItem.put(new Integer(buy1.getListId()), buy1);
-							}
-							else
-							{
-								_lists.put(new Integer(buy1.getListId()), buy1);
+							if (LimitedItem) {
+								_listsTaskItem.put(Integer.valueOf(buy1.getListId()), buy1);
+							} else {
+								_lists.put(Integer.valueOf(buy1.getListId()), buy1);
 							}
 							_nextListId = Math.max(_nextListId, buy1.getListId() + 1);
 
@@ -433,25 +368,22 @@ public class TradeController
 
 					_log.info("TradeController: Loaded " + (_lists.size() - initialSize) + " custom buylists.");
 
-					try
-					{
+					try {
 						int time = 0;
 						long savetimer = 0;
 						long currentMillis = System.currentTimeMillis();
 
-						PreparedStatement statement2 = con.prepareStatement("SELECT DISTINCT time, savetimer FROM custom_merchant_buylists WHERE time <> 0 ORDER BY time");
+						PreparedStatement statement2 = con.prepareStatement(
+								"SELECT DISTINCT time, savetimer FROM custom_merchant_buylists WHERE time <> 0 ORDER BY time");
 						ResultSet rset2 = statement2.executeQuery();
 
-						while(rset2.next())
-						{
+						while (rset2.next()) {
 							time = rset2.getInt("time");
 							savetimer = rset2.getLong("savetimer");
-							if(savetimer - currentMillis > 0)
-							{
-								ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time), savetimer - System.currentTimeMillis());
-							}
-							else
-							{
+							if (savetimer - currentMillis > 0) {
+								ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time),
+										savetimer - System.currentTimeMillis());
+							} else {
 								ThreadPoolManager.getInstance().scheduleGeneral(new RestoreCount(time), 0);
 							}
 						}
@@ -461,35 +393,27 @@ public class TradeController
 						rset2 = null;
 						statement2 = null;
 
-					}
-					catch(Exception e)
-					{
+					} catch (Exception e) {
 						_log.warn("TradeController: Could not restore Timer for Item count.");
 						e.printStackTrace();
 					}
-				}
-				catch(Exception e)
-				{
+				} catch (Exception e) {
 					_log.warn("TradeController: Buylists could not be initialized.");
 					e.printStackTrace();
-				}
-				finally
-				{
-					ResourceUtil.closeConnection(con); 
+				} finally {
+					ResourceUtil.closeConnection(con);
 				}
 			}
 		}
 	}
 
-	private int parseList(String line)
-	{
+	private int parseList(String line) {
 		int itemCreated = 0;
 		StringTokenizer st = new StringTokenizer(line, ";");
 
 		int listId = Integer.parseInt(st.nextToken());
 		L2TradeList buy1 = new L2TradeList(listId);
-		while(st.hasMoreTokens())
-		{
+		while (st.hasMoreTokens()) {
 			int itemId = Integer.parseInt(st.nextToken());
 			int price = Integer.parseInt(st.nextToken());
 			L2ItemInstance item = ItemTable.getInstance().createDummyItem(itemId);
@@ -499,118 +423,95 @@ public class TradeController
 		}
 		st = null;
 
-		_lists.put(new Integer(buy1.getListId()), buy1);
+		_lists.put(Integer.valueOf(buy1.getListId()), buy1);
 		buy1 = null;
 		return itemCreated;
 	}
 
-	public L2TradeList getBuyList(int listId)
-	{
-		if(_lists.get(new Integer(listId)) != null)
-		{
-			return _lists.get(new Integer(listId));
+	public L2TradeList getBuyList(int listId) {
+		if (_lists.get(Integer.valueOf(listId)) != null) {
+			return _lists.get(Integer.valueOf(listId));
 		}
 
-		return _listsTaskItem.get(new Integer(listId));
+		return _listsTaskItem.get(Integer.valueOf(listId));
 	}
 
-	public List<L2TradeList> getBuyListByNpcId(int npcId)
-	{
+	public List<L2TradeList> getBuyListByNpcId(int npcId) {
 		List<L2TradeList> lists = new FastList<L2TradeList>();
 
-		for(L2TradeList list : _lists.values())
-		{
-			if(list.getNpcId().startsWith("gm"))
-			{
+		for (L2TradeList list : _lists.values()) {
+			if (list.getNpcId().startsWith("gm")) {
 				continue;
 			}
 
-			if(npcId == Integer.parseInt(list.getNpcId()))
-			{
+			if (npcId == Integer.parseInt(list.getNpcId())) {
 				lists.add(list);
 			}
 		}
-		for(L2TradeList list : _listsTaskItem.values())
-		{
-			if(list.getNpcId().startsWith("gm"))
-			{
+		for (L2TradeList list : _listsTaskItem.values()) {
+			if (list.getNpcId().startsWith("gm")) {
 				continue;
 			}
 
-			if(npcId == Integer.parseInt(list.getNpcId()))
-			{
+			if (npcId == Integer.parseInt(list.getNpcId())) {
 				lists.add(list);
 			}
 		}
 		return lists;
 	}
 
-	protected void restoreCount(int time)
-	{
-		if(_listsTaskItem == null)
-		{
+	protected void restoreCount(int time) {
+		if (_listsTaskItem == null) {
 			return;
 		}
 
-		for(L2TradeList list : _listsTaskItem.values())
-		{
+		for (L2TradeList list : _listsTaskItem.values()) {
 			list.restoreCount(time);
 		}
 	}
 
-	protected void dataTimerSave(int time)
-	{
+	protected void dataTimerSave(int time) {
 		Connection con = null;
 		long timerSave = System.currentTimeMillis() + (long) time * 60 * 60 * 1000;
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
-			PreparedStatement statement = con.prepareStatement("UPDATE merchant_buylists SET savetimer = ? WHERE time = ?");
+			PreparedStatement statement = con
+					.prepareStatement("UPDATE merchant_buylists SET savetimer = ? WHERE time = ?");
 			statement.setLong(1, timerSave);
 			statement.setInt(2, time);
 			statement.executeUpdate();
 			ResourceUtil.closeStatement(statement);
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.error("TradeController: Could not update Timer save in Buylist", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 	}
 
-	public void dataCountStore()
-	{
+	public void dataCountStore() {
 		Connection con = null;
 		PreparedStatement statement;
 
 		int listId;
 
-		if(_listsTaskItem == null)
-		{
+		if (_listsTaskItem == null) {
 			return;
 		}
 
-		try
-		{
+		try {
 			con = L2DatabaseFactory.getInstance().getConnection();
 
-			for(L2TradeList list : _listsTaskItem.values())
-			{
-				if(list == null)
-				{
+			for (L2TradeList list : _listsTaskItem.values()) {
+				if (list == null) {
 					continue;
 				}
 
 				listId = list.getListId();
 
-				for(L2ItemInstance Item : list.getItems())
-				{
-					if(Item.getCount() < Item.getInitCount())
-					{
-						statement = con.prepareStatement("UPDATE merchant_buylists SET currentCount = ? WHERE item_id = ? AND shop_id = ?");
+				for (L2ItemInstance Item : list.getItems()) {
+					if (Item.getCount() < Item.getInitCount()) {
+						statement = con.prepareStatement(
+								"UPDATE merchant_buylists SET currentCount = ? WHERE item_id = ? AND shop_id = ?");
 						statement.setInt(1, Item.getCount());
 						statement.setInt(2, Item.getItemId());
 						statement.setInt(3, listId);
@@ -619,24 +520,18 @@ public class TradeController
 					}
 				}
 			}
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			_log.error("TradeController: Could not store Count Item", e);
-		}
-		finally
-		{
-			ResourceUtil.closeConnection(con); 
+		} finally {
+			ResourceUtil.closeConnection(con);
 		}
 	}
 
-	public synchronized int getNextId()
-	{
+	public synchronized int getNextId() {
 		return _nextListId++;
 	}
 
-	public static void reload()
-	{
+	public static void reload() {
 		_instance = new TradeController();
 	}
 
