@@ -26,8 +26,7 @@ import java.util.Map;
 
 import javolution.util.FastList;
 
-public class MultiSort
-{
+public class MultiSort {
 	public static final int SORT_ASCENDING = 0;
 	public static final int SORT_DESCENDING = 1;
 
@@ -37,116 +36,94 @@ public class MultiSort
 	private boolean _isSortDescending;
 	private boolean _isSorted;
 
-	public MultiSort(int[] valueList)
-	{
+	public MultiSort(int[] valueList) {
 		_valueList = getIntList(valueList);
 	}
 
-	public MultiSort(Collection<Integer> valueList)
-	{
+	public MultiSort(Collection<Integer> valueList) {
 		_valueList = getIntList(valueList);
 	}
 
-	public MultiSort(Object[] keyList, int[] valueList)
-	{
+	public MultiSort(Object[] keyList, int[] valueList) {
 		_keyList = getList(keyList);
 		_valueList = getIntList(valueList);
 	}
 
-	public MultiSort(Map<?, Integer> valueMap)
-	{
+	public MultiSort(Map<?, Integer> valueMap) {
 		_keyList = getList(valueMap.keySet());
 		_valueList = getIntList(valueMap.values());
 	}
 
-	private final List<Integer> getIntList(Collection<Integer> valueList)
-	{
+	private final List<Integer> getIntList(Collection<Integer> valueList) {
 		return Arrays.asList(valueList.toArray(new Integer[valueList.size()]));
 	}
 
-	private final List<Integer> getIntList(int[] valueList)
-	{
+	private final List<Integer> getIntList(int[] valueList) {
 		Integer[] tempIntList = new Integer[valueList.length];
 
-		for(int i = 0; i < valueList.length; i++)
-		{
-			tempIntList[i] = new Integer(valueList[i]);
+		for (int i = 0; i < valueList.length; i++) {
+			tempIntList[i] = Integer.valueOf(valueList[i]);
 		}
 
 		return Arrays.asList(tempIntList);
 	}
 
-	private final List<?> getList(Collection<?> valueList)
-	{
+	private final List<?> getList(Collection<?> valueList) {
 		return getList(valueList.toArray(new Object[valueList.size()]));
 	}
 
-	private final List<Object> getList(Object[] valueList)
-	{
+	private final List<Object> getList(Object[] valueList) {
 		return Arrays.asList(valueList);
 	}
 
-	public final int getCount()
-	{
+	public final int getCount() {
 		return getValues().size();
 	}
 
-	public final int getHarmonicMean()
-	{
-		if(getValues().isEmpty())
-		{
+	public final int getHarmonicMean() {
+		if (getValues().isEmpty()) {
 			return -1;
 		}
 
 		int totalValue = 0;
 
-		for(int currValue : getValues())
-		{
+		for (int currValue : getValues()) {
 			totalValue += 1 / currValue;
 		}
 
 		return getCount() / totalValue;
 	}
 
-	public final List<?> getKeys()
-	{
-		if(_keyList == null)
-		{
+	public final List<?> getKeys() {
+		if (_keyList == null) {
 			return new FastList<Object>();
 		}
 
 		return _keyList;
 	}
 
-	public final int getFrequency(int checkValue)
-	{
+	public final int getFrequency(int checkValue) {
 		return Collections.frequency(getValues(), checkValue);
 	}
 
-	public final int getMaxValue()
-	{
+	public final int getMaxValue() {
 		return Collections.max(getValues());
 	}
 
-	public final int getMinValue()
-	{
+	public final int getMinValue() {
 		return Collections.min(getValues());
 	}
 
-	public final int getMean()
-	{
-		if(getValues().isEmpty())
-		{
+	public final int getMean() {
+		if (getValues().isEmpty()) {
 			return -1;
 		}
 
 		return getTotalValue() / getCount();
 	}
 
-	public final double getStandardDeviation()
-	{
-		if(getValues().isEmpty())
-		{
+	public final double getStandardDeviation() {
+		if (getValues().isEmpty()) {
 			return -1;
 		}
 
@@ -155,68 +132,56 @@ public class MultiSort
 		int meanValue = getMean();
 		int numValues = getCount();
 
-		for(int value : getValues())
-		{
+		for (int value : getValues()) {
 			double adjValue = Math.pow(value - meanValue, 2);
 			tempValList.add(adjValue);
 		}
 
 		double totalValue = 0;
 
-		for(double storedVal : tempValList)
-		{
+		for (double storedVal : tempValList) {
 			totalValue += storedVal;
 		}
 
 		return Math.sqrt(totalValue / (numValues - 1));
 	}
 
-	public final int getTotalValue()
-	{
-		if(getValues().isEmpty())
-		{
+	public final int getTotalValue() {
+		if (getValues().isEmpty()) {
 			return 0;
 		}
 
 		int totalValue = 0;
 
-		for(int currValue : getValues())
-		{
+		for (int currValue : getValues()) {
 			totalValue += currValue;
 		}
 
 		return totalValue;
 	}
 
-	public final List<Integer> getValues()
-	{
-		if(_valueList == null)
-		{
+	public final List<Integer> getValues() {
+		if (_valueList == null) {
 			return new FastList<Integer>();
 		}
 
 		return _valueList;
 	}
 
-	public final boolean isSortDescending()
-	{
+	public final boolean isSortDescending() {
 		return _isSortDescending;
 	}
 
-	public final boolean isSorted()
-	{
+	public final boolean isSorted() {
 		return _isSorted;
 	}
 
-	public final void setSortDescending(boolean isDescending)
-	{
+	public final void setSortDescending(boolean isDescending) {
 		_isSortDescending = isDescending;
 	}
 
-	public boolean sort()
-	{
-		try
-		{
+	public boolean sort() {
+		try {
 			List<Object> newKeyList = new FastList<Object>();
 			List<Integer> newValueList = new FastList<Integer>();
 
@@ -224,61 +189,48 @@ public class MultiSort
 
 			int lastValue = 0;
 
-			if(!isSortDescending())
-			{
-				if(getKeys().isEmpty())
-				{
+			if (!isSortDescending()) {
+				if (getKeys().isEmpty()) {
 					return true;
 				}
 
-				for(int i = getValues().size() - 1; i > -1; i--)
-				{
+				for (int i = getValues().size() - 1; i > -1; i--) {
 					int currValue = getValues().get(i);
 
-					if(currValue == lastValue)
-					{
+					if (currValue == lastValue) {
 						continue;
 					}
 
 					lastValue = currValue;
 
-					for(int j = 0; j < getKeys().size(); j++)
-					{
+					for (int j = 0; j < getKeys().size(); j++) {
 						Object currKey = getKeys().get(j);
 
-						if(getValues().get(j) == currValue)
-						{
+						if (getValues().get(j) == currValue) {
 							newKeyList.add(currKey);
 							newValueList.add(currValue);
 						}
 					}
 				}
-			}
-			else
-			{
-				if(getKeys().isEmpty())
-				{
+			} else {
+				if (getKeys().isEmpty()) {
 					Collections.reverse(getValues());
 					return true;
 				}
 
-				for(int i = 0; i < getValues().size(); i++)
-				{
+				for (int i = 0; i < getValues().size(); i++) {
 					int currValue = getValues().get(i);
 
-					if(currValue == lastValue)
-					{
+					if (currValue == lastValue) {
 						continue;
 					}
 
 					lastValue = currValue;
 
-					for(int j = 0; j < getKeys().size(); j++)
-					{
+					for (int j = 0; j < getKeys().size(); j++) {
 						Object currKey = getKeys().get(j);
 
-						if(getValues().get(j) == currValue)
-						{
+						if (getValues().get(j) == currValue) {
 							newKeyList.add(currKey);
 							newValueList.add(currValue);
 						}
@@ -290,9 +242,7 @@ public class MultiSort
 			_valueList = newValueList;
 			_isSorted = true;
 			return true;
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			return false;
 		}
 	}
